--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="./hayden/goober.htlm">Click for Hayden</a>
     </div>
     <div>
-        <a href="./">Click for John</a>
+        <a href="./john/main.html">Click for John</a>
     </div>
 </body>
 </html>
