--- a/index.html
+++ b/index.html
@@ -17,10 +17,19 @@
         </label>
     </div>
     <div>
-        <a href="./hayden/goober.htlm">Click for Hayden</a>
+        <a href="./hayden/goober.html">Click for Hayden</a>
     </div>
     <div>
         <a href="./john/main.html">Click for John</a>
+    </div>
+    <div>
+        <h1></h1>
+        <label>
+            If you're name is Hayden, then boy do I have some nudes to show you.
+        </label>
+    </div>
+    <div>
+        <a href="./john/knock.html">Click for Nudes</a>
     </div>
 </body>
 </html>
