--- a/john/knock.html
+++ b/john/knock.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>main</title>
+    <title>Document</title>
 </head>
 <body>
-    
+    <audio src="./sound/sound.mp3" autoplay></audio>
+    <img src="./images/shark.jpg" alt="io">
 </body>
 </html>
