--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div>
         <h1></h1>
         <label>
-            If you're name is Hayden, then boy do I have some nudes to show you.
+            If your name is Hayden, then boy do I have some nudes to show you.
         </label>
     </div>
     <div>
