Basic page shell

--- a/hayden/goober.html
+++ b/hayden/goober.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./goober.css">
 </head>
-<h1>
-    <label>
-        Who is the largest man
-    </label>
+<body class="main">
+    <h1 class="intro">
+        <label>
+            My name is Hayden and I occasionally do stuff.
+        </label>
+    </h1>
+    <div class="link">
+        <a href = "https://secretly-nick.itch.io/">Check out my Itch!</a>
+    </div>
+</body>
 </html>
