--- a/john/main.html
+++ b/john/main.html
@@ -4,8 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>main</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="mid-center">
+        <div class="columns">
+            <div class="top-section">
+                <a href="../hayen/goober.html">the other guy</a>
+                <label>john miller jr</label>
+            </div>
+            <div>
+                <img src="./images/bubbles.gif" alt="bubbles.gif">
+            </div>
+            <div class="links text">
+                <a href="../index.html">home</a>
+                <label>|</label>
+                <a href="my_music.html">music</a>
+                <a href="my_videos.html">videos</a>
+                <label>|</label>
+                <a href="weekly_albums.html">weekly albums</a>
+                <label>|</label>
+                <a href="cat.html">cat</a>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- <div class="top-section">
+        <div class="left-side">
+            <a href="">About</a>
+            <a href="">Store</a>
+        </div>
+        <div class="right-side">
+            <a href="">Gmail</a>
+            <a href="">Images</a>
+        </div>
+    </div>
+    <div class="bold-text roboto">
+        <label>Hello</label>
+    </div>
+    <div class="centered-dif">
+        <button class="button">Button</button>
+    </div> -->
 </body>
 </html>
