--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="./hayden/goober.html">Click for Hayden</a>
     </div>
     <div>
-        <a href="./john/main.html">Click for John</a>
+        <a href="./john/index.html">Click for John</a>
     </div>
     <div>
         <h1></h1>
