--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>the guys</title>
 </head>
 <h1>
     <label>
-        Welcome to Big Boys
+        The Guy and Other Guy's Website
     </label>
 </h1>
 <body>
