--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </label>
     </div>
     <div>
-        <a href="hayden.html">Click for Hayden</a>
+        <a href="./hayden/index.html">Click for Hayden</a>
     </div>
     <div>
-        <a href="john.html">Click for John</a>
+        <a href="./john/index.html">Click for John</a>
     </div>
     <div>
         <h1></h1>
