--- a/john/index.html
+++ b/john/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>main</title>
-    <link rel="stylesheet" href="./john/styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="mid-center">
         <div class="columns">
             <div class="top-section">
-                <a href="./hayden/goober.html">the other guy</a>
+                <a href="../hayden/index.html">the other guy</a>
                 <label>john miller jr</label>
             </div>
             <div>
-                <img src="./john/images/bubbles.gif" alt="bubbles.gif">
+                <img src="./images/bubbles.gif" alt="bubbles.gif">
             </div>
             <div class="links text">
                 <a href="../index.html">home</a>
