--- a/hayden/index.html
+++ b/hayden/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./goober.css">
+    <link rel="stylesheet" href="./hayden.css">
 </head>
 <body class="main">
-    <h1 class="intro">
-        <label>
-            My name is Hayden and I occasionally do stuff.
-        </label>
-    </h1>
+    <div class="top_banner">
+        <h1 class="intro_panel">
+            <div>
+                Hi.
+            </div>
+            <div>
+                I'm Hayden.
+            </div>
+            <div>
+                I occasionally do stuff.
+            </div>
+        </h1>
+    </div>
     <div class="link">
         <a href = "https://secretly-nick.itch.io/">Check out my Itch!</a>
     </div>
