--- a/john/index.html
+++ b/john/index.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>main</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="mid-center">
-        <div class="columns">
+        <div>
             <div class="top-section">
-                <a href="../hayden/index.html">the other guy</a>
+                <div class="title-links">
+                    <a href="../index.html">home</a>
+                    <label>|</label>
+                    <a href="../hayden/index.html">the other guy</a>
+                </div>
                 <label>john miller jr</label>
             </div>
             <div>
                 <img src="./images/bubbles.gif" alt="bubbles.gif">
             </div>
-            <div class="links text">
-                <a href="../index.html">home</a>
-                <label>|</label>
-                <a href="my_music.html">music</a>
-                <a href="my_videos.html">videos</a>
-                <label>|</label>
+            <div class="top-section">
+                <a href="about.html">about</a>
+                <a href="publications.html">publications</a>
+                <a href="music.html">music</a>
+                <a href="videos.html">videos</a>
+                <a href="top_albums.html">top albums</a>
                 <a href="weekly_albums.html">weekly albums</a>
-                <label>|</label>
                 <a href="cat.html">cat</a>
             </div>
         </div>
