--- a/john/index.html
+++ b/john/index.html
@@ -15,7 +15,7 @@
                     <label>|</label>
                     <a href="../hayden/index.html">the other guy</a>
                 </div>
-                <label>john miller jr</label>
+                <a href="./index.html">john miller jr</a>
             </div>
             <div>
                 <img src="./images/bubbles.gif" alt="bubbles.gif">
@@ -24,7 +24,7 @@
                 <a href="about.html">about</a>
                 <a href="publications.html">publications</a>
                 <a href="music.html">music</a>
-                <a href="videos.html">videos</a>
+                <a href="footage.html">footage</a>
                 <a href="top_albums.html">top albums</a>
                 <a href="weekly_albums.html">weekly albums</a>
                 <a href="cat.html">cat</a>
