--- a/john/music.html
+++ b/john/music.html
@@ -8,20 +8,42 @@
 </head>
 <body>
     <div class="mid-center">
-        <div class="video-collection">
+        
+        <div>
+            
+            <div class="top-section">
+                <div class="title-links">
+                    <a href="../index.html">home</a>
+                    <label>|</label>
+                    <a href="../hayden/index.html">the other guy</a>
+                </div>
+                <a href="./index.html">john miller jr</a>
+            </div>
+            <div>
+                <img src="./images/snail.gif" alt="bubbles.gif">
+            </div>
+            <div class="top-section">
+                <a href="about.html">about</a>
+                <a href="publications.html">publications</a>
+                <a href="music.html"><i>music</i></a>
+                <a href="footage.html">footage</a>
+                <a href="top_albums.html">top albums</a>
+                <a href="weekly_albums.html">weekly albums</a>
+                <a href="cat.html">cat</a>
+            </div>
 
             <div class="videos">
                 <div class="top-section">
                     <label>under the hill</label>
-                    <a href="https://www.youtube.com/watch?v=h84jfNXqIGc" >youtube link</a>
+                    <a href="https://www.youtube.com/watch?v=h84jfNXqIGc" target="_blank" rel="noopener noreferrer">youtube link</a>
                 </div>
-                <iframe width="720" height="405" src="https://www.youtube.com/embed/h84jfNXqIGc?si=ufMlR2_n3RdGtk9g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="720" height="405" src="https://www.youtube.com/embed/h84jfNXqIGc?si=ufMlR2_n3RdGtk9g" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <div class="videos">
                 <div class="top-section">
                     <label>descend lower</label>
-                    <a href="https://www.youtube.com/watch?v=86z0h61R4wQ" >youtube link</a>
+                    <a href="https://www.youtube.com/watch?v=86z0h61R4wQ" target="_blank" rel="noopener noreferrer">youtube link</a>
                 </div>
                 <iframe width="720" height="405" src="https://www.youtube.com/embed/86z0h61R4wQ?si=azBC1oB9_th-ZoO7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
@@ -29,7 +51,7 @@
             <div class="videos">
                 <div class="top-section">
                     <label>unwind, unravel, and so forth</label>
-                    <a href="https://www.youtube.com/watch?v=Vm_7U8Yelsk" >youtube link</a>
+                    <a href="https://www.youtube.com/watch?v=Vm_7U8Yelsk" target="_blank" rel="noopener noreferrer">youtube link</a>
                 </div>
                 <iframe width="720" height="405" src="https://www.youtube.com/embed/Vm_7U8Yelsk?si=HH5dG1-At3IyTkUL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
@@ -37,7 +59,7 @@
             <div class="videos">
                 <div class="top-section">
                     <label>ailanthus</label>
-                    <a href="https://www.youtube.com/watch?v=K9hh4UEQDxY" >youtube link</a>
+                    <a href="https://www.youtube.com/watch?v=K9hh4UEQDxY" target="_blank" rel="noopener noreferrer">youtube link</a>
                 </div>
                 <iframe width="720" height="405" src="https://www.youtube.com/embed/K9hh4UEQDxY?si=jKBOkYz-eRA0AliP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
@@ -45,7 +67,7 @@
             <div class="videos">
                 <div class="top-section">
                     <label>frogs</label>
-                    <a href="https://www.youtube.com/watch?v=OOfImG8xzb0" >youtube link</a>
+                    <a href="https://www.youtube.com/watch?v=OOfImG8xzb0" target="_blank" rel="noopener noreferrer">youtube link</a>
                 </div>
                 <iframe width="720" height="405" src="https://www.youtube.com/embed/OOfImG8xzb0?si=GgCmberbua41ZVqi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
@@ -53,7 +75,7 @@
             <div class="videos">
                 <div class="top-section">
                     <label>what is to be done</label>
-                    <a href="https://www.youtube.com/watch?v=sN3_MDgqY_I" >youtube link</a>
+                    <a href="https://www.youtube.com/watch?v=sN3_MDgqY_I" target="_blank" rel="noopener noreferrer">youtube link</a>
                 </div>
                 <iframe width="720" height="405" src="https://www.youtube.com/embed/sN3_MDgqY_I?si=EBQ0s2y_1-YOgFRj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div class="videos">
@@ -61,7 +83,7 @@
             <div class="videos">
                 <div class="top-section">
                     <label>the beginning</label>
-                    <a href="https://www.youtube.com/watch?v=WEoLOz4rT_0" >youtube link</a>
+                    <a href="https://www.youtube.com/watch?v=WEoLOz4rT_0" target="_blank" rel="noopener noreferrer">youtube link</a>
                 </div>
                 <iframe width="720" height="405" src="https://www.youtube.com/embed/WEoLOz4rT_0?si=ysrduS8wBYVHLylY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
@@ -69,7 +91,7 @@
             <div class="videos">
                 <div class="top-section">
                     <label>roads</label>
-                    <a href="" >youtube link</a>
+                    <a href="https://www.youtube.com/watch?v=FLK053vePX4" target="_blank" rel="noopener noreferrer">youtube link</a>
                 </div>
                 <iframe width="720" height="405" src="https://www.youtube.com/embed/FLK053vePX4?si=xXaPXyHEP4IZhXPl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
@@ -77,7 +99,7 @@
             <div class="videos">
                 <div class="top-section">
                     <label>the organ suite</label>
-                    <a href="" >youtube link</a>
+                    <a href="https://www.youtube.com/watch?v=WNMFSC8RsBU" target="_blank" rel="noopener noreferrer">youtube link</a>
                 </div>
                 <iframe width="720" height="405" src="https://www.youtube.com/embed/WNMFSC8RsBU?si=JPnxQK9EK0JdaAoZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
