--- a/john/publications.html
+++ b/john/publications.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="mid-center">
+        <div>
+            <div class="top-section">
+                <div class="title-links">
+                    <a href="../index.html">home</a>
+                    <label>|</label>
+                    <a href="../hayden/index.html">the other guy</a>
+                </div>
+                <a href="./index.html">john miller jr</a>
+            </div>
+            <div>
+                <img src="./images/bubbles2.gif" alt="bubbles.gif">
+            </div>
+            <div class="top-section">
+                <a href="about.html">about</a>
+                <a href="publications.html"><i>publications</i></a>
+                <a href="music.html">music</a>
+                <a href="footage.html">footage</a>
+                <a href="top_albums.html">top albums</a>
+                <a href="weekly_albums.html">weekly albums</a>
+                <a href="cat.html">cat</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
