--- a/john/cat.html
+++ b/john/cat.html
@@ -26,8 +26,8 @@
                 <a href="music.html">music</a>
                 <a href="footage.html">footage</a>
                 <a href="top_albums.html">top albums</a>
-                <a href="weekly_albums.html"><i>weekly albums</i></a>
-                <a href="cat.html">cat</a>
+                <a href="weekly_albums.html">weekly albums</a>
+                <a href="cat.html"><i>cat</i></a>
             </div>
         </div>
     </div>
