--- a/john/knock.html
+++ b/john/knock.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <audio src="./sound/sound.mp3" autoplay></audio>
-    <img src="./images/shark.jpg" alt="io">
+    <img src="./images/shark.jpg" alt="io" style="width: 70rem">
 </body>
 </html>
