--- a/john/about.html
+++ b/john/about.html
@@ -22,7 +22,7 @@
             </div>
             <div class="top-section">
                 <a href="about.html"><i>about</i></a>
-                <a href="publications.html">publications</a>
+                <a href="research.html">research</a>
                 <a href="music.html">music</a>
                 <a href="footage.html">footage</a>
                 <a href="top_albums.html">top albums</a>
