--- a/john/index.html
+++ b/john/index.html
@@ -15,14 +15,14 @@
                     <label>|</label>
                     <a href="../hayden/index.html">the other guy</a>
                 </div>
-                <a href="./index.html">john miller jr</a>
+                <a href="./index.html"><i>john miller jr</i></a>
             </div>
             <div>
                 <img src="./images/bubbles.gif" alt="bubbles.gif">
             </div>
             <div class="top-section">
                 <a href="about.html">about</a>
-                <a href="publications.html">publications</a>
+                <a href="research.html">research</a>
                 <a href="music.html">music</a>
                 <a href="footage.html">footage</a>
                 <a href="top_albums.html">top albums</a>
