--- a/john/research.html
+++ b/john/research.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>publications</title>
+    <title>research</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
             </div>
             <div class="top-section">
                 <a href="about.html">about</a>
-                <a href="publications.html"><i>publications</i></a>
+                <a href="research.html"><i>research</i></a>
                 <a href="music.html">music</a>
                 <a href="footage.html">footage</a>
                 <a href="top_albums.html">top albums</a>
