--- a/john/music.html
+++ b/john/music.html
@@ -22,7 +22,7 @@
             </div>
             <div class="top-section">
                 <a href="about.html">about</a>
-                <a href="publications.html">publications</a>
+                <a href="research.html">research</a>
                 <a href="music.html"><i>music</i></a>
                 <a href="footage.html">footage</a>
                 <a href="top_albums.html">top albums</a>
